<resources>
    <string name="app_name">Parti</string>
    <string name="title_activity_card_view_test">CardViewTestActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="event_name">Event Name</string>
    <string name="host_name">Host Name</string>
    <string name="address">Address</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="start_time">Start Time</string>
    <string name="start_date">Start Date</string>
    <string name="end_time">End Time</string>
    <string name="end_date">End Date</string>
    <string name="description">Description</string>
    <string name="max_invites">Max Invites</string>
    <string name="additional_info">Additional Info</string>

    // Strings for invitation cards
    <string name="invitation_card_action_accept">Accept</string>
    <string name="invitation_card_action_decline">Decline</string>

</resources>
