<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/event_creation_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/primary"
        android:elevation="4dp"
        android:title="New Place">

        <Button
            android:id="@+id/event_creation_button_save"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:text="Save"
            android:textColor="@color/icons" />
    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/event_creation_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/event_creation_host_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/host_name"
            android:inputType="textCapWords"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/event_creation_address_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="textPostalAddress"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:text="@string/from"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/event_creation_start_time_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="00:00 am"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/event_creation_start_date_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="December 31st, 2015"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:text="@string/to"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/event_creation_end_time_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="00:00 am"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/event_creation_end_date_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="December 31st, 2015"
        android:textSize="20dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/event_creation_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/event_creation_additional_info_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/additional_info"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>